TEST_PROGRAMS/VALID/structs.go
package main

func main(){
    type point struct{
        x,y,z int;
    }
    var p point
    p.x = 1
    p.y = 8
    p.z = 9
}
