TEST_PROGRAMS/INVALID/03/invalid_vardecl_11.go
package main

func f(){
	var x = 10;
	y := x
	type person struct{
		first, last string
		age, height int
	}
	var k;

	return "Damn Daniel..."
}
